# vitallens-python

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.in  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: main.yml  release.yml
docs/: proxies.md  results.md
examples/: README.md  live.py  sample_vitals_1.csv  sample_vitals_2.csv  test.py
notebooks/: POS_example.ipynb
tests/: conftest.py  test_buffer.py  test_client.py  test_signal.py  test_simple_rppg_method.py  test_ssd.py  test_stream.py  test_utils.py  test_vitallens.py
vitallens/: __init__.py  api.py  buffer.py  client.py  constants.py  enums.py  errors.py  signal.py  ssd.py  stream.py  utils.py
vitallens/configs/: chrom.yaml  g.yaml  pos.yaml  vitallens-1.0.yaml  vitallens-2.0.yaml  vitallens.yaml
vitallens/methods/: __init__.py  chrom.py  g.py  pos.py  rppg_method.py  simple_rppg_method.py  vitallens.py
vitallens/models/Ultra-Light-Fast-Generic-Face-Detector-1MB/: LICENSE  model_rfb_320.onnx  model_slim_320.onnx
