[build-system]
requires = [
  "setuptools>=65.5.1",
  "setuptools-scm"
]
build-backend = "setuptools.build_meta"

[project]
name = "vitallens"
authors = [
    {name = "Philipp Rouast", email = "philipp@rouast.com"},
]
description = "Vital sign estimation from facial video"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["python", "rppg", "vital signs monitoring", "heart rate", "pulse", "respiration"]
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
]
dependencies = [
    "importlib_resources>=5.12",
    "numpy>=1.24,<2.0",
    "onnxruntime>=1.15.0",
    "prpy[ffmpeg,numpy_min]>=0.3.8",
    "python-dotenv>=1.0",
    "pyyaml>=6.0.1",
    "requests>=2.32.0",
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest", "flake8"]

[project.urls]
Repository = "https://github.com/Rouast-Labs/vitallens-python.git"
Issues = "https://github.com/Rouast-Labs/vitallens-python/issues"

[tool.setuptools]
packages = ["vitallens"]

[tool.setuptools_scm]
