[metadata]
name = vitallens-python
version = 0.1
author = Philipp Rouast
author_email = philipp@rouast.com
description = Vital sign estimation from facial video
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Rouast-Labs/vitallens-python
license = MIT
project_urls =
  Bug Tracker = https://github.com/Rouast-Labs/vitallens-python/issues
classifiers =
  Programming Language :: Python :: 3
  License :: MIT
  Operating System :: OS Independent

[options]
include_package_data = True
packages = vitallens
python_requires = >=3.8
install_requires =
  importlib_resources
  numpy
  onnxruntime
  pyyaml
  # propy[ffmpeg]==0.1.17

[options.extras_require]
test = pytest; flake8
